# secure_aws

./: .gitignore  app.py  cdk.json  pyproject.toml  requirements.txt
examples/: s3.py
scripts/: cleanup_orphaned_keys.py  delete_bucket.py
src/secure_aws/: __init__.py  props.py
src/secure_aws/kms/: __init__.py  key.py  props.py
src/secure_aws/s3/: __init__.py  bucket.py  compliance.py  kms.py  lifecycle.py  monitoring.py  policies.py  props.py  validations.py
tests/: test_removal_policies.py  test_secure_kms_key.py
