[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secure-aws"
version = "0.1.0"
description = "Reusable AWS CDK constructs for building secure, compliant AWS accounts"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.0.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
